fix music_tag_web to v2

--- a/music_tag_web/compose.yaml
+++ b/music_tag_web/compose.yaml
@@ -9,10 +9,10 @@ services:
       - PGID=3000
       - TZ=Asia/Shanghai
     ports:
-      - 8001:8001
+      - 8002:8002
     volumes:
       - /mnt/user/data/media/Music:/app/media:rw
       - /mnt/user/data/appdata/music_tag_web:/app/data
-    command: /start
+#    command: /start
     restart: unless-stopped
 networks: {}
