--- a/httpd/compose.yaml
+++ b/httpd/compose.yaml
@@ -1,11 +1,16 @@
-version: '3.8'
+version: "3.8"
 services:
-     web:
-       container_name: httpd
-       image: httpd
-       network_mode: bridge
-       ports:
-         - "9999:80"
-       volumes:
-         - /mnt/user/data/www:/usr/local/apache2/htdocs/
-       restart: unless-stopped
+  web:
+    container_name: httpd
+    image: httpd
+    network_mode: bridge
+    ports:
+      - 9999:80
+    environment:
+      - PUID=3000
+      - PGID=100
+      - TZ=Asia/Shanghai
+    volumes:
+      - /mnt/user/data/www:/usr/local/apache2/htdocs/
+    restart: unless-stopped
+
