--- a/tinymediamanager/compose.yaml
+++ b/tinymediamanager/compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: tinymediamanager
     environment:
       - USER_ID=3000
-      - GROUP_ID=3000
+      - GROUP_ID=100
       - TZ=Asia/Shanghai
       - ALLOW_DIRECT_VNC=true
     volumes:
@@ -16,3 +16,4 @@ services:
       - 5900:5900 # VNC port
       - 4000:4000 # Webinterface
     restart: unless-stopped
+networks: {}
