--- a/emby/compose.yaml
+++ b/emby/compose.yaml
@@ -11,9 +11,9 @@ services:
       - /mnt/user/data/media:/data
     network_mode: bridge
     ports:
-      - 8096:8096
+      - 8097:8096
       - 8920:8920 #optional
     devices:
       - /dev/dri:/dev/dri #optional
     restart: unless-stopped
-
+networks: {}
