--- a/tinymediamanager/compose.yaml
+++ b/tinymediamanager/compose.yaml
@@ -10,7 +10,7 @@ services:
       - ALLOW_DIRECT_VNC=true
     volumes:
       - /mnt/user/data/appdata/tinymediamanager:/data
-      - /mnt/user/data/downloads/media:/media
+      - /mnt/user/data/media:/media
     network_mode: bridge
     ports:
       - 5900:5900 # VNC port
