--- a/aria2/compose.yaml
+++ b/aria2/compose.yaml
@@ -4,8 +4,8 @@ services:
     container_name: aria2-pro
     image: p3terx/aria2-pro
     environment:
-      - PUID=3000
-      - PGID=100
+      - PUID=1000
+      - PGID=1000
       - UMASK_SET=022
       - RPC_SECRET=1107530255
       - RPC_PORT=6800
@@ -16,8 +16,8 @@ services:
       - CUSTOM_TRACKER_URL=
       - TZ=Asia/Shanghai
     volumes:
-      - /mnt/user/data/appdata/aria2:/config
-      - /mnt/user/data/media/downloads:/downloads
+      - /mnt/data/appdata/aria2:/config
+      - /mnt/data/media/downloads:/downloads
     # If you use host network mode, then no port mapping is required.
     # This is the easiest way to use IPv6 networks.
     #   network_mode: host
@@ -39,4 +39,4 @@ services:
     ports:
       - 6880:6880
     restart: unless-stopped
-
+networks: {}
