--- a/chinesesubfinder/compose.yaml
+++ b/chinesesubfinder/compose.yaml
@@ -3,12 +3,12 @@ services:
   chinesesubfinder:
     image: allanpk716/chinesesubfinder:latest
     volumes:
-      - /mnt/user/data/appdata/chinesesubfinder:/config # 冒号左边请修改为你想在主机上保存配置、日志等文件的路径
-      - /mnt/user/data/media:/media # 请修改为你的媒体目录，冒号右边可以改成你方便记忆的目录，多个媒体目录需要分别映射进来
+      - /mnt/data/appdata/chinesesubfinder:/config # 冒号左边请修改为你想在主机上保存配置、日志等文件的路径
+      - /mnt/data/media:/media # 请修改为你的媒体目录，冒号右边可以改成你方便记忆的目录，多个媒体目录需要分别映射进来
     #      - ./browser:/root/.cache/rod/browser    # 容器重启后无需再次下载 chrome，除非 go-rod 更新
     environment:
-      - PUID=3000 # uid
-      - PGID=100 # gid
+      - PUID=1000 # uid
+      - PGID=1000 # gid
       - TZ=Asia/Shanghai # 时区
       - UMASK=022 # 权限掩码
     restart: unless-stopped
@@ -18,4 +18,4 @@ services:
     ports:
       - 19035:19035 # 从0.20.0版本开始，通过webui来设置
       - 19037:19037 # webui 的视频列表读取图片用，务必设置不要暴露到外网
-
+networks: {}
