--- a/jellyfin/compose.yaml
+++ b/jellyfin/compose.yaml
@@ -3,13 +3,13 @@ services:
     image: lscr.io/linuxserver/jellyfin:latest
     container_name: jellyfin
     environment:
-      - PUID=3000
-      - PGID=100
+      - PUID=1000
+      - PGID=1000
       - TZ=Asia/Shanghai
     volumes:
-      - /mnt/user/data/appdata/jellyfin:/config
-      - /mnt/user/data/media:/data
-      - /mnt/user/data/MiSans:/usr/local/share/fonts/truetype/MiSans
+      - /mnt/data/appdata/jellyfin:/config
+      - /mnt/data/media:/data
+      - /mnt/data/MiSans:/usr/local/share/fonts/truetype/MiSans
     devices:
       - /dev/dri:/dev/dri
     network_mode: bridge
