--- a/alist/compose.yaml
+++ b/alist/compose.yaml
@@ -3,14 +3,14 @@ services:
     image: xhofe/alist:latest
     container_name: alist
     volumes:
-      - /mnt/data/appdata/alist:/opt/alist/data
-      - /mnt/data/:/mnt/data
+      - /mnt/user/data/appdata/alist:/opt/alist/data
+      - /mnt/user/data/:/mnt/user/data
     network_mode: bridge
     ports:
       - 5244:5244
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=3000
+      - PGID=3000
       - UMASK=022
       - TZ=Asia/Shanghai
     restart: unless-stopped
