--- a/aria2/compose.yaml
+++ b/aria2/compose.yaml
@@ -3,8 +3,8 @@ services:
     container_name: aria2-pro
     image: p3terx/aria2-pro
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=3000
+      - PGID=3000
       - UMASK_SET=022
       - RPC_SECRET=1107530255
       - RPC_PORT=6800
@@ -15,8 +15,8 @@ services:
       - CUSTOM_TRACKER_URL=
       - TZ=Asia/Shanghai
     volumes:
-      - /mnt/data/appdata/aria2:/config
-      - /mnt/data/media/downloads:/downloads
+      - /mnt/user/data/appdata/aria2:/config
+      - /mnt/user/data/media/downloads:/downloads
     # If you use host network mode, then no port mapping is required.
     # This is the easiest way to use IPv6 networks.
     #   network_mode: host
