--- a/music_tag_web/compose.yaml
+++ b/music_tag_web/compose.yaml
@@ -4,14 +4,14 @@ services:
     container_name: music-tag-web
     network_mode: bridge
     environment:
-      - PUID=1000
-      - PGID=1000
+#      - PUID=3000
+#      - PGID=3000
       - TZ=Asia/Shanghai
     ports:
       - 8002:8002
     volumes:
-      - /mnt/data/media/downloads/Music:/app/media:rw
-      - /mnt/data/appdata/music_tag_web:/app/data
+      - /mnt/user/data/media/downloads/Music:/app/media:rw
+      - /mnt/user/data/appdata/music_tag_web:/app/data
     #    command: /start
     restart: unless-stopped
 networks: {}
