--- a/nginx-proxy-manager/compose.yaml
+++ b/nginx-proxy-manager/compose.yaml
@@ -1,31 +1,25 @@
 services:
   nginx-proxy-manager:
-    # 给服务一个名称
     image: jc21/nginx-proxy-manager:latest
     container_name: nginx-proxy-manager
     restart: unless-stopped
     network_mode: bridge
     ports:
-      # These ports are in format <host-port>:<container-port>
       - 980:80 # Public HTTP Port
       - 9443:443 # Public HTTPS Port
       - 81:81 # Admin Web Port
       # Add any other Stream port you want to expose
       # - '21:21' # FTP
-
-      # Uncomment the next line if you uncomment anything in the section
-      # environment:
+    environment:
+      DISABLE_IPV6: "true" # Keep this if IPv6 is disabled on your host
+#      PUID: 3000
+#      PGID: 3000
+      TZ: Asia/Shanghai
       # Uncomment this if you want to change the location of
       # the SQLite DB file within the container
       # DB_SQLITE_FILE: "/data/database.sqlite"
-
-      # Uncomment this if IPv6 is not enabled on your host
-      # DISABLE_IPV6: 'true'
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Asia/Shanghai
     volumes:
-      - /mnt/data/appdata/nginx-proxy-manager:/data
-      - /mnt/data/appdata/nginx-proxy-manager/letsencrypt:/etc/letsencrypt
+      - /mnt/user/data/appdata/nginx-proxy-manager:/data
+      - /mnt/user/data/appdata/nginx-proxy-manager/letsencrypt:/etc/letsencrypt
+    # Removed networks: {} as it's not needed with bridge mode and explicit port mapping
 networks: {}
