--- a/alist-strm/compose.yaml
+++ b/alist-strm/compose.yaml
@@ -4,6 +4,10 @@ services:
     image: itefuir/alist-strm:latest # 镜像名称及版本
     stdin_open: true # 保持容器的 stdin 打开
     tty: true # 支持终端交互
+    environment:
+      - PUID=3000
+      - PGID=3000
+      - TZ=Asia/Shanghai
     ports:
       - 15000:5000 # 映射端口（宿主机:容器）
     volumes:
