--- a/dockge/compose.yaml
+++ b/dockge/compose.yaml
@@ -7,9 +7,9 @@ services:
       - 5001:5001
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./data:/app/data
-      - /mnt/data/appdata/stacks:/mnt/data/appdata/stacks
+      - /mnt/user/data/appdata/dockge:/app/data
+      - /mnt/user/data/appdata/stacks:/mnt/user/data/appdata/stacks
     environment:
       # Tell Dockge where to find the stacks
-      - DOCKGE_STACKS_DIR=/mnt/data/appdata/stacks
+      - DOCKGE_STACKS_DIR=/mnt/user/data/appdata/stacks
 networks: {}
