--- a/xiaomusic/compose.yaml
+++ b/xiaomusic/compose.yaml
@@ -11,6 +11,6 @@ services:
     ports:
       - 8090:8090
     volumes:
-      - /mnt/data/media/Music:/app/music
-      - /mnt/data/appdata/xiaomusic/conf:/app/conf
+      - /mnt/user/data/media/Music:/app/music
+      - /mnt/user/data/appdata/xiaomusic/conf:/app/conf
 networks: {}
