--- a/singbox/compose.yaml
+++ b/singbox/compose.yaml
@@ -6,6 +6,6 @@ services:
     ports:
       - 5000:5000
     volumes:
-      - /mnt/user/data/appdata/sing-box-subscribe:/sing-box-subscribe
+      - /mnt/user/data/appdata/sing-box-subscribe/config_template:/sing-box-subscribe/config_template
     restart: unless-stopped
 networks: {}
