--- a/jellyfin/compose.yaml
+++ b/jellyfin/compose.yaml
@@ -7,13 +7,13 @@ services:
       - PGID=1000
       - TZ=Asia/Shanghai
     volumes:
-      - /mnt/data/appdata/jellyfin:/config
-      - /mnt/data/media:/data
-      - /mnt/data/MiSans:/usr/local/share/fonts/truetype/MiSans
+      - /mnt/user/data/appdata/jellyfin:/config
+      - /mnt/user/data/media:/data
+      - /mnt/user/data/MiSans:/usr/local/share/fonts/truetype/MiSans
     devices:
       - /dev/dri:/dev/dri
     network_mode: bridge
     ports:
-      - 8096:8096
+      - 8097:8096
     restart: unless-stopped
 networks: {}
