--- a/subconverter/compose.yaml
+++ b/subconverter/compose.yaml
@@ -1,12 +1,14 @@
 services:
   subconverter:
-    image: tindy2013/subconverter:latest
+    image: asdlokj1qpi23/subconverter:latest
     container_name: subconverter
     network_mode: bridge
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Asia/Shanghai
+    volumes:
+      - /mnt/user/data/appdata/subconverter/base:/base
     ports:
       - 5002:25500
     restart: unless-stopped
