--- a/clash/compose.yaml
+++ b/clash/compose.yaml
@@ -3,6 +3,10 @@ services:
     image: python:3
     container_name: clash
     working_dir: /usr/src/myapp
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Asia/Shanghai
     network_mode: bridge
     ports:
       - 5002:5002
@@ -10,7 +14,7 @@ services:
       - /mnt/user/data/appdata/clash:/usr/src/myapp
     command: |
       sh -c "pip install -r requirements.txt && python app.py"
-    restart: unless-stopped  
+    restart: unless-stopped
     stdin_open: true # 等同于 -i
     tty: true # 等同于 -t
 networks: {}
