--- a/singbox/compose.yaml
+++ b/singbox/compose.yaml
@@ -1,11 +1,20 @@
 services:
-  SingBox-Subscribe:
-    container_name: sing-box-subscribe
-    image: hestudy/sing-box-subscribe
+  python-script:
+    image: python:3
+    container_name: singbox
+    working_dir: /usr/src/myapp
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Asia/Shanghai
     network_mode: bridge
     ports:
       - 5000:5000
     volumes:
-      - /mnt/user/data/appdata/sing-box-subscribe/config_template:/sing-box-subscribe/config_template
+      - /mnt/user/data/appdata/singbox:/usr/src/myapp
+    command: |
+      sh -c "pip install -r requirements.txt && python app.py"
     restart: unless-stopped
+    stdin_open: true # 等同于 -i
+    tty: true # 等同于 -t
 networks: {}
