--- a/emby/compose.yaml
+++ b/emby/compose.yaml
@@ -1,6 +1,6 @@
 services:
   emby:
-    image: lscr.io/linuxserver/emby:latest
+    image: emby/embyserver:latest
     container_name: emby
     environment:
       - PUID=1000
