--- a/shutdown/compose.yaml
+++ b/shutdown/compose.yaml
@@ -4,8 +4,8 @@ services:
     container_name: shutdown
     working_dir: /usr/src/myapp
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=3000
+      - PGID=3000
       - TZ=Asia/Shanghai
     network_mode: bridge
     ports:
@@ -17,3 +17,4 @@ services:
     restart: unless-stopped
     stdin_open: true # 等同于 -i
     tty: true # 等同于 -t
+networks: {}
