--- a/nginx/compose.yaml
+++ b/nginx/compose.yaml
@@ -4,12 +4,12 @@ services:
     container_name: nginx-server
     network_mode: bridge
     environment:
-      - PUID=3000
-      - PGID=3000
+      - PUID=1000
+      - PGID=1000
       - TZ=Asia/Shanghai
     ports:
       - 8080:80 # 映射 HTTP 端口
-    #      - 443:443 # 映射 HTTPS 端口 (如果使用 SSL)
+      - 8443:443 # 映射 HTTPS 端口 (如果使用 SSL)
     volumes:
       - /mnt/user/data/appdata/nginx:/etc/nginx # 挂载本地 Nginx 配置文件 
       - /mnt/user/data/www:/usr/share/nginx/html # 挂载本地 HTML 文件夹
