--- a/zashboard/compose.yaml
+++ b/zashboard/compose.yaml
@@ -5,7 +5,8 @@ services:
     image: ghcr.io/zephyruso/zashboard:latest
     network_mode: bridge
     environment:
-      - PUID=3000
-      - PGID=3000
+      - PUID=1000
+      - PGID=1000
       - TZ=Asia/Shanghai
     restart: unless-stopped
+networks: {}
