--- a/emby/compose.yaml
+++ b/emby/compose.yaml
@@ -8,7 +8,7 @@ services:
       - TZ=Asia/Shanghai
     volumes:
       - /mnt/user/data/appdata/emby:/config
-      - /mnt/user/data/media:/data
+      - /mnt/user/data/Downloads/media:/data
     network_mode: bridge
     ports:
       - 8096:8096
