--- a/tinymediamanager/compose.yaml
+++ b/tinymediamanager/compose.yaml
@@ -1,6 +1,6 @@
 services:
   tinymediamanager:
-    image: tinymediamanager/tinymediamanager:latest
+    image: docker.io/tinymediamanager/tinymediamanager:latest
     container_name: tinymediamanager
     environment:
       - USER_ID=1000
@@ -8,11 +8,8 @@ services:
       - TZ=Asia/Shanghai
       - ALLOW_DIRECT_VNC=true
     volumes:
-      - /mnt/user/data/appdata/tinymediamanager:/data
-      - /mnt/user/data/Downloads/media:/media
-    network_mode: bridge
+      - /mnt/user/data/appdata/tinymediamanager:/data:Z
+      - /mnt/user/data/Downloads/media:/media:Z
     ports:
       - 5900:5900 # VNC port
       - 4000:4000 # Webinterface
-    restart: unless-stopped
-networks: {}
