--- a/webdav/compose.yaml
+++ b/webdav/compose.yaml
@@ -1,15 +1,13 @@
 services:
   webdav:
-    image: hacdias/webdav:latest
+    image: docker.io/hacdias/webdav:latest
     container_name: webdav-server
-    restart: unless-stopped
-    network_mode: bridge
     ports:
       - 6065:6065
     volumes:
-      - /mnt/user/data/www/webdav:/srv
-      - /mnt/user/data/appdata/webdav/config.yaml:/config.yaml
+      - /mnt/user/data/www/webdav:/srv:Z
+      - /mnt/user/data/appdata/webdav/config.yaml:/config.yaml:Z
     environment:
       - WEBDAV_CONFIG=/config.yaml
     user: 1000:1000
-networks: {}
+
