--- a/aria2/compose.yaml
+++ b/aria2/compose.yaml
@@ -1,7 +1,7 @@
 services:
   Aria2-Pro:
     container_name: aria2-pro
-    image: p3terx/aria2-pro
+    image: docker.io/p3terx/aria2-pro:latest
     environment:
       - PUID=1000
       - PGID=1000
@@ -15,27 +15,17 @@ services:
       - CUSTOM_TRACKER_URL=
       - TZ=Asia/Shanghai
     volumes:
-      - /mnt/user/data/appdata/aria2:/config
-      - /mnt/user/data/Downloads:/downloads
-    # If you use host network mode, then no port mapping is required.
-    # This is the easiest way to use IPv6 networks.
-    #   network_mode: host
-    network_mode: bridge
+      - /mnt/user/data/appdata/aria2:/config:Z
+      - /mnt/user/data/Downloads:/downloads:Z
     ports:
       - 6800:6800
       - 6888:6888
       - 6888:6888/udp
-    restart: unless-stopped
-  # Since Aria2 will continue to generate logs, limit the log size to 1M to prevent your hard disk from running out of space.
 
-  # AriaNg is just a static web page, usually you only need to deploy on a single host.
   AriaNg:
     container_name: ariang
-    image: p3terx/ariang
+    image: docker.io/p3terx/ariang:latest
     command: --port 6880
-    #    network_mode: host
-    network_mode: bridge
     ports:
       - 6880:6880
-    restart: unless-stopped
-networks: {}
+
