--- a/clash/compose.yaml
+++ b/clash/compose.yaml
@@ -1,20 +1,17 @@
 services:
   python-script:
-    image: python:3
+    image: docker.io/library/python:3
     container_name: clash
     working_dir: /usr/src/myapp
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Asia/Shanghai
-    network_mode: bridge
     ports:
       - 5002:5002
     volumes:
-      - /mnt/user/data/appdata/clash:/usr/src/myapp
+      - /mnt/user/data/appdata/clash:/usr/src/myapp:Z
     command: |
       sh -c "pip install -r requirements.txt && python app.py"
-    restart: unless-stopped
     stdin_open: true # 等同于 -i
     tty: true # 等同于 -t
-networks: {}
