--- a/homeassistant/compose.yaml
+++ b/homeassistant/compose.yaml
@@ -7,10 +7,9 @@ services:
       - PGID=1000
       - TZ=Asia/Shanghai
     volumes:
-      - /mnt/user/data/appdata/homeassistant:/config
+      - /mnt/user/data/appdata/homeassistant:/config:Z
       - /etc/localtime:/etc/localtime:ro
       - /run/dbus:/run/dbus:ro
-    restart: unless-stopped
     privileged: true
     network_mode: host
-networks: {}
+
