--- a/homepage/compose.yaml
+++ b/homepage/compose.yaml
@@ -7,7 +7,7 @@ services:
     volumes:
       - /mnt/user/data/appdata/homepage:/app/config:Z # Make sure your local config directory exists
       - /mnt/user/data/appdata/homepage/icons:/app/public/icons:Z
-      - /var/run/docker.sock:/var/run/docker.sock # (optional) For docker integrations, see alternative methods 
+      # - /var/run/docker.sock:/var/run/docker.sock # (optional) For docker integrations, see alternative methods 
     environment:
       - PUID=1000
       - PGID=1000
