--- a/emby/compose.yaml
+++ b/emby/compose.yaml
@@ -8,7 +8,7 @@ services:
       - TZ=Asia/Shanghai
     volumes:
       - /mnt/user/data/appdata/emby:/config:Z
-      - /mnt/user/data/Downloads/media:/data:Z
+      - /mnt/user/data/Downloads/media:/data:z
     ports:
       - 8096:8096
       - 7359:7359/udp
